--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -40,6 +40,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="5 Sets of 2 heavy (relative) reps."
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/deadeliftDescription"
+            android:textColor="#ffffff"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Dumbbell Rows"
             android:id="@+id/dbrow"
             android:textColor="#ffffff"
@@ -60,6 +70,16 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="3 Sets of 8 reps."
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/dbrowDescription"
+            android:textColor="#ffffff"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Barbell Shrugs"
             android:id="@+id/shrug"
             android:textColor="#ffffff"
@@ -76,6 +96,16 @@
             android:layout_below="@+id/shrug"
             android:clickable="true"
             android:layout_gravity="center_horizontal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="3 Sets of 10 reps."
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/shrugDescription"
+            android:textColor="#ffffff"
+            />
 
         <Button
             android:layout_width="wrap_content"
