--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -105,14 +105,15 @@
             android:layout_marginLeft="50dp"
             />
 
-        <ImageButton
-            android:layout_width="150dp"
-            android:layout_height="170dp"
-            android:src="@drawable/cameraapp"
-
-            android:scaleType="centerCrop"
-            android:id="@+id/Profilepicview"
-            android:layout_below="@+id/editprofile"
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/profilepicview"
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:src="@drawable/ic_camera"
+            app:civ_border_width="2dp"
+            app:civ_border_color="#c28585"
+            android:layout_below="@+id/name"
             android:layout_alignEnd="@+id/CurrH" />
 
         <Button
@@ -126,7 +127,6 @@
             android:layout_alignParentStart="true" />
 
     </RelativeLayout>
-
 
 
 </FrameLayout>
