Added all max, labels still need fix

--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -123,8 +123,8 @@
             android:text="Edit Profile"
             android:id="@+id/editprofile"
             android:layout_marginLeft="32dp"
-            android:layout_below="@+id/name"
-            android:layout_alignParentStart="true" />
+            android:layout_alignBottom="@+id/profilepicview"
+            android:layout_alignStart="@+id/height" />
 
     </RelativeLayout>
 
