consistency with bodybuilding pages and cleaned up workout program

--- a/app/src/main/res/layout/fragment_body_building_day_four.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_four.xml
@@ -27,7 +27,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Deadlift"
         android:id="@+id/deadliftText"
@@ -44,26 +44,23 @@
         android:layout_gravity="center_horizontal"
         android:src="@drawable/deadlift"
         android:clickable="true"
-        android:layout_marginTop="20dp"
         />
 
             <TextView
-                android:layout_width="234dp"
-                android:layout_height="34dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="4 Sets of 8 Repetitions. (2 minute rest between sets)"
-                android:layout_marginBottom="15dp"
                 android:id="@+id/deadliftDetail"
                 android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
                 />
 
     <TextView
-        android:layout_width="219dp"
-        android:layout_height="63dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Pull-ups"
         android:id="@+id/pullupText"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="40dp"
         android:textColor="#ffffff"
         android:textSize="25dp"
         />
@@ -75,7 +72,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/pullupImage"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="35dp"
         android:src="@drawable/pullup"
         android:clickable="true"
         android:layout_below="@+id/pullupText"
@@ -88,16 +84,14 @@
                 android:text="3 Sets of 6-10 repetitions depending on skill level."
                 android:id="@+id/pullupDetail"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="20dp"
                 android:textColor="#ffffff" />
 
             <TextView
-                android:layout_width="171dp"
-                android:layout_height="59dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Dumbbell Row"
                 android:id="@+id/dumbbellRowText"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="125dp"
                 android:textColor="#ffffff"
                 android:textSize="25dp"
                 android:layout_below="@+id/pullupDetail"
@@ -111,18 +105,16 @@
         android:layout_height="wrap_content"
         android:id="@+id/dumbbellRowImage"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="70dp"
         android:clickable="true"
         android:src="@drawable/dbrow"
         />
 
             <TextView
-                android:layout_width="177dp"
-                android:layout_height="34dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="4 sets of 15 repetitions."
                 android:id="@+id/dumbbellRowDetail"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="120dp"
                 android:textColor="#ffffff"
                 android:layout_below="@+id/dumbbellRowImage"
                 android:layout_above="@+id/completeDay4bb"
