--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -25,7 +25,7 @@
                 />
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Barbell Bench Press"
         android:id="@+id/benchText"
@@ -48,19 +48,18 @@
         />
 
             <TextView
-                android:layout_width="234dp"
-                android:layout_height="34dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="4 Sets of 10-12 Repetitions. (1 minute rest between sets)"
                 android:id="@+id/benchDetail"
                 android:layout_gravity="center_horizontal"
                 android:layout_below="@+id/benchImage"
                 android:textColor="#ffffff"
-                android:layout_marginLeft="20dp"
                 />
 
     <TextView
-        android:layout_width="219dp"
-        android:layout_height="63dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Dumbbell Flyes"
         android:id="@+id/flyText"
         android:layout_gravity="center_horizontal"
@@ -68,7 +67,6 @@
         android:textSize="25dp"
         android:layout_below="@+id/benchDetail"
         android:layout_above="@+id/flyDetail"
-        android:layout_marginLeft="20dp"
         />
 
 
@@ -78,7 +76,6 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/flyImage"
                 android:layout_gravity="right|center_vertical"
-                android:layout_marginBottom="35dp"
                 android:src="@drawable/flyes"
                 android:clickable="true"
                 android:layout_below="@+id/flyText"
@@ -86,57 +83,56 @@
                 />
 
             <TextView
-                android:layout_width="206dp"
-                android:layout_height="49dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="4 Sets of 15 lighter weight repetitions "
                 android:id="@+id/flyDetail"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="20dp"
                 android:textColor="#ffffff"
                 android:layout_below="@+id/flyImage"
                 android:layout_above="@+id/pushupText"
                 />
 
-    <TextView
-        android:layout_width="132dp"
-        android:layout_height="59dp"
-        android:text="Push-up"
-        android:id="@+id/pushupText"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="125dp"
-        android:textColor="#ffffff"
-        android:textSize="25dp"
-        android:layout_below="@+id/flyDetail"
-        android:layout_above="@+id/pushupImage"
-        />
-
-
-
-    <ImageButton
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/pushupImage"
-        android:layout_gravity="right|bottom"
-        android:layout_marginBottom="70dp"
-        android:clickable="true"
-        android:src="@drawable/pushup" />
 
             <TextView
-                android:layout_width="177dp"
-                android:layout_height="34dp"
-                android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)"
-                android:id="@+id/pushupDetail"
-                android:layout_gravity="left|bottom"
-                android:layout_marginBottom="120dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Push-up"
+                android:id="@+id/pushupText"
+                android:layout_gravity="center_horizontal"
                 android:textColor="#ffffff"
-                android:layout_below="@+id/pushupImage"
-                android:layout_above="@+id/completeDay2bb"
+                android:textSize="25dp"
+                android:layout_below="@+id/flyDetail"
                 />
 
 
 
-    <Button
+
+            <ImageButton
+                android:scaleType="fitXY"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/pushupImage"
+                android:layout_gravity="center_horizontal"
+                android:clickable="true"
+                android:layout_below="@+id/pushupText"
+                android:src="@drawable/pushup" />
+
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4 sets of 10-30 concentrated repetitions (Depending on skill level)"
+                android:id="@+id/pushupDetail"
+                android:layout_gravity="center_horizontal"
+                android:textColor="#ffffff"
+                android:layout_below="@+id/pushupImage"
+                />
+
+
+
+            <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Workout Complete!"
