Changes to layout

--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -36,7 +36,7 @@
 
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Strength Training"
             android:id="@+id/StrengthTrainingButton"
@@ -61,16 +61,15 @@
 
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="BodyBuilding"
             android:id="@+id/BodyBuildingButton"
             android:clickable="true"
-            android:layout_below="@+id/strengthTrainingText"
-            android:layout_centerHorizontal="true"
 
 
-            />
+            android:layout_above="@+id/bodyBuildingText"
+            android:layout_alignStart="@+id/StrengthTrainingButton" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -79,23 +78,23 @@
             android:text="Obtain a more aesthetic physique!"
             android:id="@+id/bodyBuildingText"
             android:textColor="@android:color/white"
-            android:layout_below="@id/BodyBuildingButton"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
 
 
-            />
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="Weight Loss"
             android:id="@+id/WeightLossButton"
             android:clickable="true"
             android:layout_below="@+id/bodyBuildingText"
-            android:layout_centerHorizontal="true"
-            />
+            android:layout_alignStart="@+id/chooseFitnessProgramText"
+            android:layout_marginTop="77dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,12 +103,12 @@
             android:text="Lose weight and get in better shape!"
             android:id="@+id/weightLossText"
             android:textColor="@android:color/white"
+
+
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_below="@+id/WeightLossButton"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="10dp"
-
-
-            />
+            android:layout_centerHorizontal="true" />
 
 
 
