Added menu labels for each fragment

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,7 +14,7 @@
 
     <item
         android:id="@+id/uName"
-        android:title="Log out"
+        android:title=""
         android:showAsAction="always"
         />
 </menu>
