--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,6 +15,6 @@
     <item
         android:id="@+id/uName"
         android:title=""
-        android:showAsAction="always"
+        android:showAsAction="always|withText"
         />
 </menu>
