Strength & Bodybuilding How to with back button functionality

--- a/app/src/main/res/layout/fragment_strength_how_to.xml
+++ b/app/src/main/res/layout/fragment_strength_how_to.xml
@@ -56,6 +56,14 @@
         android:layout_gravity="right|center_vertical"
         android:textColor="#FFFFFF" />
 
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BACK"
+            android:id="@+id/Sdayhow2back"
+            android:layout_gravity="bottom"
+            android:layout_alignParentBottom="true"
+            />
 
     </LinearLayout>>
 
