--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -16,11 +16,10 @@
         android:layout_height="wrap_content"
         android:text="BMI"
         android:id="@+id/profileBMIButton"
-        android:layout_gravity="center"
-        android:layout_alignTop="@+id/saveButtonProfile"
-        android:layout_alignEnd="@+id/CurrH"
-        android:layout_marginLeft="30dp"
-        />
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center_horizontal"
+
+        android:layout_centerHorizontal="true" />
 
 
         <TextView
@@ -32,9 +31,8 @@
         android:text="Username"
         android:textColor="#ffffff"
 
-            android:layout_marginLeft="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/editprofile" />
+
+            android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="130dp"
@@ -74,7 +72,6 @@
         android:text="Height"
         android:textSize="20dp"
         android:textIsSelectable="true"
-
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="50dp"
@@ -101,8 +98,8 @@
             android:id="@+id/saveButtonProfile"
             android:layout_gravity="left"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="50dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignEnd="@+id/CurrH"
             />
 
         <Button
@@ -111,7 +108,9 @@
             android:layout_height="wrap_content"
             android:text="Edit Profile"
             android:id="@+id/editprofile"
-            android:layout_marginLeft="32dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+
             android:layout_alignBottom="@+id/profilepicview"
             android:layout_alignStart="@+id/height" />
 
@@ -122,7 +121,10 @@
             android:id="@+id/pic"
             android:onClick="process"
             android:layout_below="@+id/profilepicview"
-            android:layout_toEndOf="@+id/name" />
+            android:layout_gravity="center_horizontal"
+
+
+            android:layout_centerHorizontal="true" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -133,14 +135,18 @@
             app:civ_border_width="2dp"
             app:civ_border_color="#c28585"
             android:layout_below="@+id/name"
-            android:layout_alignEnd="@+id/CurrH" />
+            android:layout_gravity="center_horizontal"
+            android:layout_centerHorizontal="true" />
+
+            />
 
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:id="@+id/test"
             android:layout_below="@+id/pic"
-            android:layout_alignStart="@+id/profilepicview" />
+            android:layout_alignStart="@+id/profilepicview"
+            />
 
     </RelativeLayout>
 
