Weightloss format fixed

--- a/app/src/main/res/layout/fragment_fp__wgt__loss.xml
+++ b/app/src/main/res/layout/fragment_fp__wgt__loss.xml
@@ -12,11 +12,12 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Weight Loss"
         android:id="@+id/weightLossTitle"
-        android:background="#1fff28"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:textIsSelectable="false" />
+        android:textIsSelectable="false"
+        android:textColor="#ffff"
+        />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -26,7 +27,7 @@
         android:id="@+id/day1WeightLoss"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
-        android:background="#1aff13" />
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -35,7 +36,7 @@
         android:id="@+id/day4WeightLoss"
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-        android:background="#1aff31" />
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -44,7 +45,7 @@
         android:id="@+id/day3WeightLoss"
         android:layout_marginBottom="25dp"
         android:layout_gravity="center"
-        android:background="#14ff29" />
+       />
 
     <Button
         android:layout_width="match_parent"
@@ -53,7 +54,7 @@
         android:id="@+id/day5WeightLoss"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-        android:background="#25ff30" />
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -62,7 +63,7 @@
         android:id="@+id/day2WeightLoss"
         android:layout_marginBottom="75dp"
         android:layout_gravity="center"
-        android:background="#16ff1a" />
+         />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
